--- a/tests/tests.html
+++ b/tests/tests.html
@@ -10,8 +10,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.0.0.js"></script>
-  <script type="text/javascript">IS_TEST = true;</script>
-  <script src="../content_script.js"></script>
+  <script src="../HTMLSerializer.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
