--- a/tests/tests.html
+++ b/tests/tests.html
@@ -11,6 +11,7 @@
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.0.0.js"></script>
   <script src="../HTMLSerializer.js"></script>
+  <script src="../popup.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
