Improve user interface

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,6 @@
   </head>
 
   <body>
-    <a id="button" href="#">SnapIt!</a>
-    <a id="download" href=""></a>
+    <a id="button" class="capture" href="#">Snap It!</a>
   </body>
 </html>
